--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=3.0" />
-    <title>Sportfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+    <meta name="description" content="NBA Player Analytics & Trading Platform - AI-powered insights for fantasy sports and betting" />
+    <meta name="theme-color" content="#000000" />
+    <title>Sportfolio - NBA Analytics</title>
   </head>
   <body>
     <div id="root"></div>
